cleaning up dl directory

--- a/DeepLearning_Pipeline/notebooks/training-Copy1.ipynb
+++ b/DeepLearning_Pipeline/notebooks/training-Copy1.ipynb
@@ -78,9 +78,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"jupiter2\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_15 (InputLayer)        [(None, 100, 100, 1)]     0         \n",
+      "_________________________________________________________________\n",
+      "rescaling_13 (Rescaling)     (None, 100, 100, 1)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_36 (Conv2D)           (None, 100, 100, 16)      32        \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_36 (MaxPooling (None, 50, 50, 16)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_37 (Conv2D)           (None, 50, 50, 32)        544       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_37 (MaxPooling (None, 25, 25, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_38 (Conv2D)           (None, 25, 25, 64)        2112      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_38 (MaxPooling (None, 12, 12, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout_12 (Dropout)         (None, 12, 12, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten_12 (Flatten)         (None, 9216)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_23 (Dense)             (None, 128)               1179776   \n",
+      "_________________________________________________________________\n",
+      "dense_24 (Dense)             (None, 5)                 645       \n",
+      "=================================================================\n",
+      "Total params: 1,183,109\n",
+      "Trainable params: 1,180,421\n",
+      "Non-trainable params: 2,688\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "num_classes = 5\n",
     "\n",
@@ -103,106 +142,70 @@
     "    \n",
     "model.compile(optimizer=\"adam\", \n",
     "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-    "              metrics=['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "              metrics=['accuracy'])\n",
+    "\n",
     "for i in range(0,10):\n",
-    "    model.layers[i].trainable = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    model.layers[i].trainable = False\n",
+    "    \n",
     "model.compile(optimizer=\"adam\", \n",
     "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-    "              metrics=['accuracy'])"
+    "              metrics=['accuracy'])\n",
+    "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.layers[10].trainable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(len(model.layers)):\n",
-    "    model.layers[]\n",
-    "    print(l.name, l.trainable)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"jupiter2\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "input_14 (InputLayer)        [(None, 100, 100, 1)]     0         \n",
-      "_________________________________________________________________\n",
-      "rescaling_12 (Rescaling)     (None, 100, 100, 1)       0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_33 (Conv2D)           (None, 100, 100, 16)      32        \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_33 (MaxPooling (None, 50, 50, 16)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_34 (Conv2D)           (None, 50, 50, 32)        544       \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_34 (MaxPooling (None, 25, 25, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_35 (Conv2D)           (None, 25, 25, 64)        2112      \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_35 (MaxPooling (None, 12, 12, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "dropout_11 (Dropout)         (None, 12, 12, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "flatten_11 (Flatten)         (None, 9216)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_21 (Dense)             (None, 128)               1179776   \n",
-      "_________________________________________________________________\n",
-      "dense_22 (Dense)             (None, 5)                 645       \n",
-      "=================================================================\n",
-      "Total params: 1,183,109\n",
-      "Trainable params: 1,183,109\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
+     "ename": "ValueError",
+     "evalue": "The input must have 3 channels; got `input_shape=(100, 100, 1)`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-127-d9b03559dca8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Initialize the Pretrained Model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m feature_extractor = ResNet50(weights='imagenet', \n\u001b[0m\u001b[1;32m      6\u001b[0m                              \u001b[0minput_shape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg_height\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg_width\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m                              include_top=False)\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/tensorflow/python/keras/applications/resnet.py\u001b[0m in \u001b[0;36mResNet50\u001b[0;34m(include_top, weights, input_tensor, input_shape, pooling, classes, **kwargs)\u001b[0m\n\u001b[1;32m    472\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mstack1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m512\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'conv5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    473\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 474\u001b[0;31m   return ResNet(stack_fn, False, True, 'resnet50', include_top, weights,\n\u001b[0m\u001b[1;32m    475\u001b[0m                 input_tensor, input_shape, pooling, classes, **kwargs)\n\u001b[1;32m    476\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/tensorflow/python/keras/applications/resnet.py\u001b[0m in \u001b[0;36mResNet\u001b[0;34m(stack_fn, preact, use_bias, model_name, include_top, weights, input_tensor, input_shape, pooling, classes, classifier_activation, **kwargs)\u001b[0m\n\u001b[1;32m    149\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    150\u001b[0m   \u001b[0;31m# Determine proper input shape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 151\u001b[0;31m   input_shape = imagenet_utils.obtain_input_shape(\n\u001b[0m\u001b[1;32m    152\u001b[0m       \u001b[0minput_shape\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    153\u001b[0m       \u001b[0mdefault_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m224\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/tensorflow/python/keras/applications/imagenet_utils.py\u001b[0m in \u001b[0;36mobtain_input_shape\u001b[0;34m(input_shape, default_size, min_size, data_format, require_flatten, weights)\u001b[0m\n\u001b[1;32m    363\u001b[0m           \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'`input_shape` must be a tuple of three integers.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    364\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0minput_shape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m3\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mweights\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'imagenet'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 365\u001b[0;31m           raise ValueError('The input must have 3 channels; got '\n\u001b[0m\u001b[1;32m    366\u001b[0m                            '`input_shape=' + str(input_shape) + '`')\n\u001b[1;32m    367\u001b[0m         if ((input_shape[0] is not None and input_shape[0] < min_size) or\n",
+      "\u001b[0;31mValueError\u001b[0m: The input must have 3 channels; got `input_shape=(100, 100, 1)`"
      ]
     }
    ],
    "source": [
+    "from tensorflow.keras.applications import ResNet50\n",
+    "num_classes = 5\n",
+    "\n",
+    "# Initialize the Pretrained Model\n",
+    "feature_extractor = ResNet50(weights='imagenet', \n",
+    "                             input_shape=(img_height, img_width, 1),\n",
+    "                             include_top=False)\n",
+    "\n",
+    "# Set this parameter to make sure it's not being trained\n",
+    "feature_extractor.trainable = False\n",
+    "\n",
+    "# Set the input layer\n",
+    "input_ = tf.keras.Input(shape=(img_height, img_width, 1))\n",
+    "\n",
+    "# Set the feature extractor layer\n",
+    "x = feature_extractor(input_, training=False)\n",
+    "\n",
+    "# Set the pooling layer\n",
+    "x = tf.keras.layers.GlobalAveragePooling2D()(x)\n",
+    "\n",
+    "# Set the final layer with sigmoid activation function\n",
+    "output_ = tf.keras.layers.Dense(num_classes)(x)\n",
+    "\n",
+    "# Create the new model object\n",
+    "model = tf.keras.Model(input_, output_)\n",
+    "\n",
+    "# Compile it\n",
+    "model.compile(optimizer='adam',\n",
+    "             loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "             metrics=['accuracy'])\n",
+    "\n",
+    "# Print The Summary of The Model\n",
     "model.summary()"
    ]
   },
